--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
       })(window, document);
     </script>
     <link
-      href="https://assets.website-files.com/630f88193cbc64052ccdfc7c/6331b8cdec3e6097921f6f2b_favicon.png"
+      href="Images/IIIT_Surat_logo-removebg-preview 2.png"
       rel="shortcut icon"
       type="image/x-icon"
     />
@@ -630,8 +630,8 @@
               </div>
             </div>
             <img
-              src="Images/logo.png "
-              style="transform: scale(1.5); position: relative; top: 20px"
+              src="Images/RANDI-LOGO.png"
+              style="transform: scale(2.5); position: relative; top: 20px"
               loading="lazy"
               alt=""
               class="nav-logo"
@@ -670,8 +670,8 @@
           </div>
           <div class="hero-c">
             <div class="hero-date">Feb 21st -23rd</div>
-            <div class="hero-city">SURAT, GUJARAT</div>
-            <div class="pure-c">
+           
+            <div class="pure-c" style="position: relative;top:20px;">
               <img
                 src="Images/Spring fiesta (white).png"
                 loading="lazy"
@@ -1231,8 +1231,8 @@
           <div class="div-block">
             <div class="workshop-p-c"></div>
             <div class="workshop-header">
-              <h2 class="speaker-h">Our Leads<br /></h2>
-              <p class="paragraph">Yes, We are Your Leads</p>
+              <h2 class="speaker-h">Leads<br /></h2>
+              <p class="paragraph">Members of organising commity</p>
             </div>
             <a
               data-w-id="f7f2c534-2456-ed46-076b-796489a21ec8"
@@ -1290,7 +1290,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/Manish.jpeg"
+                    src="./images/leads/manishsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1348,7 +1348,7 @@
                     alt=""
                     class="image"
                   /><img
-                    src="images/leads/akanksh.jpeg"
+                    src="./images/leads/akanksh.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1406,7 +1406,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/nitin.jpeg"
+                    src="images/leads/Nitinsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1580,7 +1580,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/parth.jpeg"
+                    src="images/leads/parthsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1696,7 +1696,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/onkar.jpeg"
+                    src="images/leads/OMkarsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2117,7 +2117,7 @@
                 </div>
                 <div class="div-block-2">
                   <div class="paragraph">Sparsh Jhariya</div>
-                  <p class="workshop-desc">Tech &amp; E-cell</p>
+                  <p class="workshop-desc">Tech</p>
                 </div>
               </div>
               <div
@@ -2161,7 +2161,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/dhruv.jpeg"
+                    src="images/leads/dhruvsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2175,7 +2175,7 @@
                 </div>
                 <div class="div-block-2">
                   <div class="paragraph">Dhruv</div>
-                  <p class="workshop-desc">Tech &amp; E-cell</p>
+                  <p class="workshop-desc">Tech</p>
                 </div>
               </div>
               <div
@@ -2233,7 +2233,7 @@
                 </div>
                 <div class="div-block-2">
                   <div class="paragraph">Kushagra</div>
-                  <p class="workshop-desc">Tech &amp; E-cell</p>
+                  <p class="workshop-desc">E-cell</p>
                 </div>
               </div>
               <div
@@ -2291,7 +2291,7 @@
                 </div>
                 <div class="div-block-2">
                   <div class="paragraph">Aman</div>
-                  <p class="workshop-desc">Tech &amp; E-cell</p>
+                  <p class="workshop-desc">Tech </p>
                 </div>
               </div>
               <div
@@ -2349,7 +2349,7 @@
                 </div>
                 <div class="div-block-2">
                   <div class="paragraph">Mohit</div>
-                  <p class="workshop-desc">Tech &amp; E-cell</p>
+                  <p class="workshop-desc">Tech</p>
                 </div>
               </div>
               <div
@@ -2465,7 +2465,7 @@
                 </div>
                 <div class="div-block-2">
                   <div class="paragraph">Richard</div>
-                  <p class="workshop-desc">Tech &amp; E-cell</p>
+                  <p class="workshop-desc">E-cell</p>
                 </div>
               </div>
             </div>
@@ -2585,7 +2585,7 @@
               </div>
             </div>
             <img
-              style="width: 800px"
+              style="width: 50%"
               src="https://assets.website-files.com/630f88193cbc64052ccdfc7c/632fcfac320e0eaed8aaf67d_octopus-robot.svg"
               loading="lazy"
               alt=""
@@ -2595,7 +2595,7 @@
               loading="lazy"
               alt=""
               class="strawberry"
-            />
+             />
           </div>
         </div>
         <div class="wave-embed is--moved-up w-embed">
@@ -2963,7 +2963,7 @@
             </div>
             <a
               data-w-id="3fdd9948-7b2b-d80d-39f9-3ec0547a1890"
-              href="https://www.dropbox.com/s/x1w1sphuy08gurw/Creative%20South%20Sponsor%20Deck%202023_vF.pdf?dl=0"
+              href="become_a_sponser_href"
               target="_blank"
               class="button is--larger w-inline-block"
               style="
