--- a/index.html
+++ b/index.html
@@ -1348,7 +1348,7 @@
                     alt=""
                     class="image"
                   /><img
-                    src="./images/leads/akanksh.jpeg"
+                    src="Images\leads\akanksh.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
