--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="./images/leads/manishsirji.jpg"
+                    src="Images/leads/manishsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1406,7 +1406,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/Nitinsirji.jpg"
+                    src="Images/leads/Nitinsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1464,7 +1464,7 @@
                     alt=""
                     class="image"
                   /><img
-                    src="images/leads/Daivik.jpeg"
+                    src="Images/leads/Daivik.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1522,7 +1522,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/parva.jpeg"
+                    src="Images/leads/parva.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1580,7 +1580,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/parthsirji.jpg"
+                    src="Images/leads/parthsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1638,7 +1638,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/Ambikesh.jpeg"
+                    src="Images/leads/Ambikesh.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1696,7 +1696,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/OMkarsirji.jpg"
+                    src="Images/leads/OMkarsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1754,7 +1754,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/Vishal.jpeg"
+                    src="Images/leads/Vishal.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1813,7 +1813,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/Ishitva.jpeg"
+                    src="Images/leads/Ishitva.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1871,7 +1871,7 @@
                     alt=""
                     class="image"
                   /><img
-                    src="images/leads/rajwardhan.jpeg"
+                    src="Images/leads/rajwardhan.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1929,7 +1929,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/Sachet.jpeg"
+                    src="Images/leads/Sachet.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1987,7 +1987,7 @@
                     alt=""
                     class="image"
                   /><img
-                    src="images/leads/pulkit.jpeg"
+                    src="Images/leads/pulkit.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2045,7 +2045,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/prasang.jpeg"
+                    src="Images/leads/prasang.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2103,7 +2103,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/sparsh.jpeg"
+                    src="Images/leads/sparsh.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2161,7 +2161,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/dhruvsirji.jpg"
+                    src="Images/leads/dhruvsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2219,7 +2219,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/kushagra.jpeg"
+                    src="Images/leads/kushagra.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2277,7 +2277,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/aman.jpeg"
+                    src="Images/leads/aman.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2335,7 +2335,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/mohit.jpeg"
+                    src="Images/leads/mohit.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2393,7 +2393,7 @@
                     alt=""
                     class="image"
                   /><img
-                    src="images/leads/anshikama'am.jpeg"
+                    src="Images/leads/anshikama'am.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2451,7 +2451,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="images/leads/richard.jpg"
+                    src="Images/leads/richard.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
