--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="Images/leads/Nitinsirji.jpg"
+                    src="Images\leads\Nitinsirji.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -1464,7 +1464,7 @@
                     alt=""
                     class="image"
                   /><img
-                    src="Images/leads/Daivik.jpeg"
+                    src="Images\leads\Daivik.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
