--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
       })(window, document);
     </script>
     <link
-      href="Images/IIIT_Surat_logo-removebg-preview 2.png"
+      href = "Images/IIIT_Surat_logo-removebg-preview 2.png"
       rel="shortcut icon"
       type="image/x-icon"
     />
@@ -630,7 +630,7 @@
               </div>
             </div>
             <img
-              src="Images/RANDI-LOGO.png"
+              src="Images/RANDI-BHATT.png"
               style="transform: scale(2.5); position: relative; top: 20px"
               loading="lazy"
               alt=""
@@ -3248,7 +3248,7 @@
         <div class="container2" style="margin-top: 6%; margin-bottom: 3%">
           <div class="box">
             <div class="imgBx">
-              <img src="images/bharat.png" />
+              <img src="Images/bharat.png" />
             </div>
             <div class="content hov-box">
               <div>
@@ -3309,7 +3309,7 @@
           </div>
           <div class="box">
             <div class="imgBx">
-              <img src="images/aditya.png" />
+              <img src="Images/aditya.png" />
             </div>
             <div class="content hov-box">
               <div>
@@ -3370,7 +3370,7 @@
           </div>
           <div class="box">
             <div class="imgBx">
-              <img src="images/Akash.png" class="social-media" />
+              <img src="Images/Akash.png" class="social-media" />
             </div>
             <div class="content hov-box">
               <div>
@@ -3431,7 +3431,7 @@
           </div>
           <div class="box">
             <div class="imgBx hov-box">
-              <img src="images/Behera.png" />
+              <img src="Images/Behera.png" />
             </div>
             <div class="content hov-box">
               <div>
