hopefully final commit

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
             <div class="nav-c is--left">
               <div class="nav-link-c">
                 <a href="#agenda" class="link-c w-inline-block">
-                  <div class="nav-link-text">Schedule</div>
+                  <div class="nav-link-text">Itinerary</div>
                   <div class="underline-c">
                     <div
                       class="underline"
@@ -1651,7 +1651,7 @@
                   />
                 </div>
                 <div class="div-block-2">
-                  <div class="paragraph">Ambikesh Mishra</div>
+                  <div class="paragraph">Ambikesh</div>
                   <p class="workshop-desc">Cultural</p>
                 </div>
               </div>
@@ -2045,7 +2045,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="Images/leads/prasang.jpeg"
+                    src="Images/leads/krish.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2058,8 +2058,8 @@
                   />
                 </div>
                 <div class="div-block-2">
-                  <div class="paragraph">Prasang</div>
-                  <p class="workshop-desc">Design</p>
+                  <div class="paragraph">Krish</div>
+                  <p class="workshop-desc">Content</p>
                 </div>
               </div>
               <div
@@ -2103,7 +2103,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="Images/leads/sparsh.jpeg"
+                    src="Images/leads/Astiksir.jpg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2116,8 +2116,8 @@
                   />
                 </div>
                 <div class="div-block-2">
-                  <div class="paragraph">Sparsh Jhariya</div>
-                  <p class="workshop-desc">Tech</p>
+                  <div class="paragraph">Astik</div>
+                  <p class="workshop-desc">Content</p>
                 </div>
               </div>
               <div
@@ -2219,7 +2219,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="Images/leads/kushagra.jpeg"
+                    src="Images/leads/anshikama'am.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2232,8 +2232,8 @@
                   />
                 </div>
                 <div class="div-block-2">
-                  <div class="paragraph">Kushagra</div>
-                  <p class="workshop-desc">E-cell</p>
+                  <div class="paragraph">Anshika</div>
+                  <p class="workshop-desc">Art</p>
                 </div>
               </div>
               <div
@@ -2335,7 +2335,7 @@
                     alt=""
                     class="image w-condition-invisible"
                   /><img
-                    src="Images/leads/mohit.jpeg"
+                    src="Images/leads/sparsh.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2348,7 +2348,7 @@
                   />
                 </div>
                 <div class="div-block-2">
-                  <div class="paragraph">Mohit</div>
+                  <div class="paragraph">Sparsh</div>
                   <p class="workshop-desc">Tech</p>
                 </div>
               </div>
@@ -2393,7 +2393,7 @@
                     alt=""
                     class="image"
                   /><img
-                    src="Images/leads/anshikama'am.jpeg"
+                    src="Images/leads/kushagra.jpeg"
                     loading="lazy"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -2406,8 +2406,8 @@
                   />
                 </div>
                 <div class="div-block-2">
-                  <div class="paragraph">Anshika</div>
-                  <p class="workshop-desc">Art</p>
+                  <div class="paragraph">Kushagra</div>
+                  <p class="workshop-desc">E-Cell</p>
                 </div>
               </div>
               <div
