Dev team updated

--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
       }
       .container2 .box {
         position: relative;
-        width: 275px;
-        height: 275px;
+        width: 220px;
+        height: 220px;
         background: #000;
         transition: 0.5s;
         transform-style: preserve-3d;
@@ -3231,22 +3231,51 @@
                       alt=""
                       class="footer-social-icon"
                   /></a>
-                  <!-- <a
-                    href="https://www.linkedin.com/in/springfiesta-iiit-surat-2b31b6266/"
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="box">
+            <div class="imgBx">
+              <img src="Images/shivam.png" />
+            </div>
+            <div class="content hov-box">
+              <div>
+                <h2>Shivam Patel</h2>
+                <p>Co-Lead</p>
+                <div class="footer-social-c">
+                    <a
+                    href="https://www.linkedin.com/in/shivampatel59/"
                     target="_blank"
-                    class="footer-social-link w-inline-block"
+                    class="footer-social-link w-inline-block hov-elem"
+                    style="
+                    transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
+                      rotateX(0deg) rotateY(0deg) rotateZ(0deg)
+                      skew(0deg, 0deg);
+                    transform-style: preserve-3d;
+                  "
+                >
+                  <i
+                    class="fa-brands fa-linkedin-in"
+                    style="color: #f6ebd8; transform: scale(2)"
+                  ></i
+                  /></a>
+                  <a
+                    href="https://www.instagram.com/shivam.p_01/"
+                    target="_blank"
+                    class="footer-social-link w-inline-block hov-elem"
                     style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
                         rotateX(0deg) rotateY(0deg) rotateZ(0deg)
                         skew(0deg, 0deg);
                       transform-style: preserve-3d;
                     "
-                  >
-                    <i
-                      class="fa-brands fa-linkedin-in"
-                      style="color: #f6ebd8; transform: scale(2)"
-                    ></i
-                  ></a> -->
+                    ><img
+                      src="https://assets.website-files.com/630f88193cbc64052ccdfc7c/63312391e5a254125b19df0e_instagram-icon-light.svg"
+                      loading="eager"
+                      alt=""
+                      class="footer-social-icon"
+                  /></a>
                 </div>
               </div>
             </div>
