--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
               <p></p>
               <a
                 data-w-id="faaf8e0a-3eef-7ecb-89b9-7dcbd7a6e76d"
-                href="https://discord.gg/c5BuNWch"
+                href="https://linktr.ee/iiitsspringfiesta"
                 target="_blank"
                 class="button is--discord hidden w-inline-block"
                 style="transform-style: preserve-3d"
@@ -674,12 +674,12 @@
                 <div class="button-text">The fam</div>
                 <div class="button-color"></div>
                 <div class="button-shadow"></div>
-                <img
+                <!-- <img
                   src="https://assets.website-files.com/630f88193cbc64052ccdfc7c/632385f573f9047f1b59e67a_discord-logo-black.svg"
                   loading="lazy"
                   alt="black discord logo"
                   class="button-icon"
-                />
+                /> -->
               </a>
             </div>
           </div>
@@ -3471,17 +3471,14 @@
         <div class="container">
           <div class="footer-info">
             <div class="footer-col-left">
-              <p class="footer-copyright">
-                Ⓒ <span class="year">2023</span> Spring Fiesta
-              </p>
-              <p class="footer-copyright">
-                <a
-                  href="https://www.creativesouth.org/"
-                  target="_blank"
-                  class="cs-foundation-link"
-                  >Give to the Foundation | Policies | FAQs | Code of Conduct</a
-                >
-              </p>
+              <p class="footer-copyright" style="font-size: 2.5em; position: relative; right: 5%;bottom: 18%;">Teachers</p>
+              <ul class="footer-copyright" style="list-style-type: none; line-height: 150%; position: relative; right: 23%;">
+                <a href="https://www.linkedin.com/in/anand-pratap-singh-phd-22a49b56/"><li>Anand Pratap</li></a>
+                <a href="https://www.linkedin.com/in/dr-shriman-narayana-6623511a6/"><li>Shriman Narayan</li></a>
+                <a href="https://www.linkedin.com/in/rahul-patel-b98a13214/"><li>Rahul Patel</li></a>
+                <a href="https://www.linkedin.com/in/ritesh-kumar-8491918a/"><li>Ritesh Kumar</li></a>
+              </ul>
+              
             </div>
             <div class="footer-social-c">
               <a
@@ -3548,6 +3545,9 @@
                   class="footer-social-icon"
               /></a>
             </div>
+            <p  style="font-size: 1em; position: absolute; bottom: 10%; right: 1.6%;">
+              Ⓒ <span class="year">2023</span> Spring Fiesta
+            </p>
           </div>
           <img
             src="https://assets.website-files.com/630f88193cbc64052ccdfc7c/633126144a0d2fd12d860576_footer-oompa.svg"
@@ -3557,7 +3557,7 @@
           />
         </div>
       </div>
-    </div>
+      </div>
     <script
       src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=630f88193cbc64052ccdfc7c"
       type="text/javascript"
